--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NOIR - Fashion Forward</title>
+    <title>GIRLFLY- Fashion Forward</title>
     <link rel="stylesheet" href="templatemo-noir-fashion.css">
 <!-- 
 TemplateMo 599 Noir Fashion
@@ -24,7 +24,7 @@ https://templatemo.com/tm-599-noir-fashion
                     <polygon points="50,10 20,50 50,90 80,50" fill="none" stroke="url(#logoGrad)" stroke-width="3"/>
                     <circle cx="50" cy="50" r="5" fill="url(#logoGrad)"/>
                 </svg>
-                <span class="logo-text">NOIR</span>
+                <span class="logo-text">GIRLFLY</span>
             </a>
             <ul class="nav-links">
                 <li><a href="#home" class="nav-link active">Home</a></li>
@@ -452,4 +452,5 @@ https://templatemo.com/tm-599-noir-fashion
 
     <script src="templatemo-noir-scripts.js"></script>
 </body>
+
 </html>
