--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ https://templatemo.com/tm-599-noir-fashion
     <footer>
         <div class="footer-content">
             <div class="footer-brand">
-                <h3>NOIR</h3>
+                <h3>GIRLFLY</h3>
                 <p>Redefining fashion with bold designs, sustainable practices, and uncompromising quality. Join us in creating the future of style.</p>
                 <div class="social-links">
                     <a href="#" class="social-link">f</a>
@@ -440,7 +440,7 @@ https://templatemo.com/tm-599-noir-fashion
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 NOIR. All rights reserved. | Designed by <a href="https://templatemo.com" target="_blank" rel="nofollow" style="color: var(--accent); text-decoration: none;">TemplateMo</a></p>
+            <p>&copy; 2025 GIRLFLY. All rights reserved. | Designed by <a href="https://templatemo.com" target="_blank" rel="nofollow" style="color: var(--accent); text-decoration: none;">TemplateMo</a></p>
             <div class="payment-methods">
                 <div class="payment-icon">VISA</div>
                 <div class="payment-icon">MC</div>
@@ -454,3 +454,4 @@ https://templatemo.com/tm-599-noir-fashion
 </body>
 
 </html>
+
